# online-cinema

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  CI.md
src/: main.py
src/config/: settings.py
src/database/: models.py  session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 894009b157d7_add_carts_and_cart_items_tables.py  aa843d32db5d_create_order_and_order_items_tables.py  ad1617d2814d_add_movies_table.py  da91d9ec59bf_initial_auth_tables.py
src/database/validators/: accounts.py
src/routers/: auth.py  cart.py  movies.py  orders.py
src/schemas/: auth.py  cart.py  movies.py  orders.py
src/services/auth/: dependencies.py  security.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_auth.py  test_smoke.py
